cluster/apps/plex-support/radarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/secure-backends: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    hajimari.io/enable: "true"
    hajimari.io/icon: "filmstrip"
    hajimari.io/appName: "Radarr"
  labels:
    app: radarr-ingress
  name: radarr-ingress
  namespace: plex-support
spec:
  ingressClassName: traefik
  rules:
    - host: radarr.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: radarr
                port:
                  number: 7878
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - radarr.${SECRET_DOMAIN}
      secretName: wildcard-tls
